Allow caller to pass index expressions
Signed-off-by: Craig Perkins <cwperx@amazon.com>